--- a/pubs.html
+++ b/pubs.html
@@ -327,6 +327,25 @@ $(document).ready(function () {
 <p><br></p>
 <p>See my <a href="https://scholar.google.com.au/citations?user=hMG_gR4AAAAJ&amp;oi=ao">Google Scholar profile</a> for bibliometrics, or <a href="http://arxiv.org/a/rubinstein_b_1">arXiv</a> for preprints. My responses to government consultations are <a href="impact.html#policy_submissions">here</a>.</p>
 <div id="section" class="section level3">
+<h3>2021</h3>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-zhang2021improving">
+@inproceedings{zhang2021improving,
+  title = {Improving Interpretability of {CNN} Models Using Non-Negative Concept Activation Vectors},
+  author = {Ruihan Zhang and Prashan Madumal and Tim Miller and Kris Ehinger and Benjamin Rubinstein},
+  booktitle = {Proceedings of the 35th AAAI Conference on Artificial Intelligence},
+  series = {AAAI},
+  year = {2021},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Improving Interpretability of CNN Models Using Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2021 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
+</ul>
+</div>
+<div id="section-1" class="section level3">
 <h3>2020</h3>
 
 <div class="bibox" style="display: none;">
@@ -375,6 +394,23 @@ $(document).ready(function () {
 
 <ul>
 <li>Leins, Kobi, Chris Culnane, and Benjamin I. P. Rubinstein. “Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions”. In: <em>Medical Journal of Australia</em> (Jun. 2020). [<a href="https://doi.org/10.5694/mja2.50669">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('leins2020tracking.bib', 'bibtex-leins2020tracking')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-Zhou2020early">
+@article{Zhou2020early,
+  title = {Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
+  year = {2020},
+  author = {Shuo Zhou and Howard Bondell and Antoinette Tordesillas and Benjamin I. P. Rubinstein and James Bailey},
+  journal = {Annals of Applied Statistics},
+  volume = {14},
+  number = {2},
+  pages = {977-992},
+}
+</code></pre></div>
+
+<ul>
+<li>Zhou, Shuo, Howard Bondell, Antoinette Tordesillas, Benjamin I. P. Rubinstein, and James Bailey. “Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model”. In: <em>Annals of Applied Statistics</em> 14.2 (2020), pp. 977-992 [<a href="http://dx.doi.org/10.1214/20-AOAS1326">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Zhou2020early.bib', 'bibtex-Zhou2020early')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -450,23 +486,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Edwards, Tobias, Benjamin I. P. Rubinstein, Zuhe Zhang, and Sanming Zhou. <em>A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy</em>. arXiv:2007.05975 [cs.IT]. Jul. 2020 [<a href="https://arxiv.org/abs/2007.05975">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('edwards2020a.bib', 'bibtex-edwards2020a')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-Zhou2020early">
-@article{Zhou2020early,
-  title = {Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
-  year = {2020},
-  author = {Shuo Zhou and Howard Bondell and Antoinette Tordesillas and Benjamin I. P. Rubinstein and James Bailey},
-  journal = {Annals of Applied Statistics},
-  volume = {14},
-  number = {2},
-  pages = {977-992},
-}
-</code></pre></div>
-
-<ul>
-<li>Zhou, Shuo, Howard Bondell, Antoinette Tordesillas, Benjamin I. P. Rubinstein, and James Bailey. “Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model”. In: <em>Annals of Applied Statistics</em> 14.2 (2020), pp. 977-992 [<a href="http://dx.doi.org/10.1214/20-AOAS1326">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Zhou2020early.bib', 'bibtex-Zhou2020early')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -566,21 +585,6 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-zhang2020improving">
-@misc{zhang2020improving,
-  title = {Improving Interpretability of {CNN} Models Using Non-Negative Concept Activation Vectors},
-  author = {Ruihan Zhang and Prashan Madumal and Tim Miller and Kris Ehinger and Benjamin Rubinstein},
-  note = {arXiv:2006.15417 [cs.CV]},
-  year = {2020},
-  month = {Jun},
-}
-</code></pre></div>
-
-<ul>
-<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. <em>Improving Interpretability of CNN Models Using Non-Negative Concept Activation Vectors</em>. arXiv:2006.15417 [cs.CV]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.15417">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2020improving.bib', 'bibtex-zhang2020improving')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
 <pre><code id="bibtex-gelbhart2020discrete">
 @misc{gelbhart2020discrete,
   title = {Discrete Few-Shot Learning for Pan Privacy},
@@ -595,7 +599,7 @@ $(document).ready(function () {
 <li>Gelbhart, Roei and Benjamin I. P. Rubinstein. <em>Discrete Few-Shot Learning for Pan Privacy</em>. arXiv:2006.13120 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.13120">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('gelbhart2020discrete.bib', 'bibtex-gelbhart2020discrete')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-2" class="section level3">
 <h3>2019</h3>
 
 <div class="bibox" style="display: none;">
@@ -728,7 +732,7 @@ $(document).ready(function () {
 <li>Oetomo, Bastian, Malinga Perera, Renata Borovica-Gajic, and Benjamin I. P. Rubinstein. <em>A Note on Bounding Regret of the C<span class="math inline">\(^2\)</span>UCB Contextual Combinatorial Bandit</em>. Feb. 2019. arXiv: 1902.07500 [cs.LG]. [<a href="https://arxiv.org/pdf/1902.07500">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('oetomo2019a.bib', 'bibtex-oetomo2019a')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2018</h3>
 
 <div class="bibox" style="display: none;">
@@ -853,7 +857,7 @@ $(document).ready(function () {
 <li>Han, Yi and Benjamin I. P. Rubinstein. “Adequacy of the Gradient-Descent Method for Classifier Evasion Attacks”. In: <em>AAAI-18 Workshop on Artificial Intelligence for Cyber Security</em>. AICS. Jan. 2018 [<a href="https://arxiv.org/pdf/1704.01704">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2018adequacy.bib', 'bibtex-han2018adequacy')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2017</h3>
 
 <div class="bibox" style="display: none;">
@@ -1044,7 +1048,7 @@ $(document).ready(function () {
 <li>Verkade, Heather, Jason M. Lodge, Kristine Elliott, Terrence D. Mulhern, Allen A. Espinosa, Simon J. Cropper, and Benjamin I. P. Rubinstein. “Exploring misconceptions as a trigger for enhancing student learning”. In: <em>Higher Education Research and Development Society of Australasia</em>. HERDSA. Apr. 2017 [<a href="http://www.herdsa.org.au/system/files/Verkade_et_al_HERDSA2017.pdf">PDF</a>; <a href="http://www.herdsa.org.au/research-and-development-higher-education-vol-40-392">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('verkade2017exploring.bib', 'bibtex-verkade2017exploring')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2016</h3>
 
 <div class="bibox" style="display: none;">
@@ -1206,7 +1210,7 @@ $(document).ready(function () {
 <li>He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang, and Sandra Milligan. <em>TopicResponse: A Marriage of Topic Modelling and Rasch Modelling for Automatic Measurement in MOOCs</em>. 2016. arXiv: 1607.08720 [cs.LG]. [<a href="https://arxiv.org/pdf/1607.08720">PDF</a>; <a href="https://bitbucket.org/jiazhenhe/topicresponse">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2016topicresponse.bib', 'bibtex-he2016topicresponse')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2015</h3>
 
 <div class="bibox" style="display: none;">
@@ -1297,7 +1301,7 @@ $(document).ready(function () {
 <li>Fanaeepour, Maryam, Lars Kulik, Egemen Tanin, and Benjamin I. P. Rubinstein. “The CASE histogram: Privacy-aware processing of trajectory data using aggregates”. In: <em>GeoInformatica</em> 19.4 (Jul. 2015), pp. 747-798 [<a href="http://link.springer.com/article/10.1007/s10707-015-0228-8">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fanaeepour2015the.bib', 'bibtex-fanaeepour2015the')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2014</h3>
 
 <div class="bibox" style="display: none;">
@@ -1353,7 +1357,7 @@ $(document).ready(function () {
 <li>Dimitrakakis, Christos, Aikaterini Mitrokotsa, and Benjamin I. P. Rubinstein. “Proceedings of the 7th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2014 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, 2014, pp. 1-124 [<a href="https://dl.acm.org/citation.cfm?id=2666652&amp;picked=prox">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('dimitrakakis2014proceedings.bib', 'bibtex-dimitrakakis2014proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2012</h3>
 
 <div class="bibox" style="display: none;">
@@ -1504,7 +1508,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Blaine Nelson, and Benjamin I. P. Rubinstein. “Fifth ACM Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2012 ACM Conference on Computer and Communications Security</em>. CCS. ACM. Oct. 2012, pp. 1-110 [<a href="http://dx.doi.org/10.1145/2382196.2382327">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2012fifth.bib', 'bibtex-cardenas2012fifth')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2011</h3>
 
 <div class="bibox" style="display: none;">
@@ -1594,7 +1598,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Rachel Greenstadt, and Benjamin I. P. Rubinstein. “Proceedings of the 4th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2011 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, Oct. 2011, pp. 1-116 [<a href="http://dl.acm.org/citation.cfm?id=2046684&amp;coll=DL&amp;dl=GUIDE&amp;CFID=49909398&amp;CFTOKEN=70172951">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2011proceedings.bib', 'bibtex-cardenas2011proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2010</h3>
 
 <div class="bibox" style="display: none;">
@@ -1661,7 +1665,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Secure Learning and Learning for Security: Research in the Intersection”. PhD dissertation. Department of Electrical Engineering &amp; Computer Sciences, University of California, Berkeley, May. 2010 [<a href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2010/EECS-2010-71.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2010secure.bib', 'bibtex-rubinstein2010secure')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-10" class="section level3">
+<div id="section-11" class="section level3">
 <h3>2009</h3>
 
 <div class="bibox" style="display: none;">
@@ -1764,7 +1768,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Shifting in the n-Cube: Online Mistake Bounds and the Sample Compression Conjecture”. MCompSci thesis. Faculty of Engineering, University of Melbourne, 2009 [<a href="http://repository.unimelb.edu.au/10187/5774">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009bshifting.bib', 'bibtex-rubinstein2009bshifting')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-11" class="section level3">
+<div id="section-12" class="section level3">
 <h3>2008</h3>
 
 <div class="bibox" style="display: none;">
@@ -1848,7 +1852,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft, and Doug Tygar. <em>Compromising PCA-based anomaly detectors for network-wide traffic</em>. technical report UCB/EECS-2008-73. EECS Department, University of California, Berkeley, 2008 [<a href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2008/EECS-2008-73.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008compromising.bib', 'bibtex-rubinstein2008compromising')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-12" class="section level3">
+<div id="section-13" class="section level3">
 <h3>2007</h3>
 
 <div class="bibox" style="display: none;">
