--- a/group.html
+++ b/group.html
@@ -343,7 +343,7 @@ $(document).ready(function () {
 <li>Ruihan Zhang (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and machine learning.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
-<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Gidon Ernst at LMU Munich 2018– ). Software fuzzing with machine learning.</li>
+<li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018– ). Software fuzzing with machine learning.</li>
 <li><a href="https://www.linkedin.com/in/neil-marchant-466678aa/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016– ). Record linkage, adaptive importance sampling.</li>
 </ul>
 </div>
@@ -351,7 +351,7 @@ $(document).ready(function () {
 <h3>PhD students—Completed</h3>
 <ul>
 <li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata → Postdoc at Univ Melbourne</li>
-<li>Yuan Li (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne</li>
+<li><a href="https://scholar.google.com/citations?user=qDDC09EAAAAJ&amp;hl=en">Yuan Li</a> (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne</li>
 <li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU</li>
 <li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015–18). Distributed graph processing → Founder, NeuroPhyte</li>
 <li><a href="https://xunyunliu.github.io/">Xunyun Liu</a> (w Raj Buyya, Rodrigo Calheiros 2015–18). Stream computing → Assistant Prof at NUDT</li>
