--- a/impact.html
+++ b/impact.html
@@ -547,6 +547,7 @@ div.tocify {
 <h3>Institutional</h3>
 <ul>
 <li>Associate Dean Research (2020), Melbourne School of Engineering</li>
+<li>Co-lead (2021–), AI Group, School of Computing and Information Systems</li>
 <li>Member (2019–), School Executive, School of Computing and Information Systems</li>
 <li>Member (2019–) and Chair (2020), Awards and Prizes Working Group, Melbourne School of Engineering</li>
 <li>Investigator (2000–), Melbourne Centre for Data Science (MCDS)</li>
