--- a/impact.html
+++ b/impact.html
@@ -546,7 +546,7 @@ div.tocify {
 <div id="institutional" class="section level3">
 <h3>Institutional</h3>
 <ul>
-<li>Associate Dean Research (2020), Melbourne School of Engineering</li>
+<li>Associate Dean Research (2020), Faculty of Engineering and Information Technology</li>
 <li>Co-lead (2021–), AI Group, School of Computing and Information Systems</li>
 <li>Member (2019–), School Executive, School of Computing and Information Systems</li>
 <li>Member (2019–) and Chair (2020), Awards and Prizes Working Group, Melbourne School of Engineering</li>
