www21 and shijie

--- a/group.html
+++ b/group.html
@@ -337,6 +337,7 @@ $(document).ready(function () {
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
+<li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie Liu</a>. (w Sarah Erfani 2021– ). Certified robustness.</li>
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Distributed adversarial learning.</li>
 <li><a href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei Gelbhart</a> (2019– ). Robustness in machine learning.</li>
