--- a/pubs.html
+++ b/pubs.html
@@ -330,6 +330,22 @@ $(document).ready(function () {
 <h3>2021</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-xu2021a">
+@inproceedings{xu2021a,
+  title = {A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning},
+  author = {Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
+  booktitle = {Proceedings of the 2021 World Wide Web Conferece},
+  series = {WWW},
+  note = {Accepted},
+  year = {2021},
+}
+</code></pre></div>
+
+<ul>
+<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzman, Benjamin I. P. Rubinstein, and Trevor Cohn. “A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning”. In: <em>Proceedings of the 2021 World Wide Web Conferece</em>. WWW. Accepted. 2021 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021a.bib', 'bibtex-xu2021a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-zhang2021improving">
 @inproceedings{zhang2021improving,
   title = {Improving Interpretability of {CNN} Models Using Non-Negative Concept Activation Vectors},
@@ -441,21 +457,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>A general framework for label-efficient online evaluation with asymptotic guarantees</em>. arXiv:2006.06963 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.06963">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020a.bib', 'bibtex-marchant2020a')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-xu2020a">
-@misc{xu2020a,
-  title = {Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
-  author = {Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
-  note = {arXiv:2011.00675 [cs.CL]},
-  year = {2020},
-  month = {Oct},
-}
-</code></pre></div>
-
-<ul>
-<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzman, Benjamin I. P. Rubinstein, and Trevor Cohn. <em>Targeted Poisoning Attacks on Black-Box Neural Machine Translation</em>. arXiv:2011.00675 [cs.CL]. Oct. 2020 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2020a.bib', 'bibtex-xu2020a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
