--- a/group.html
+++ b/group.html
@@ -345,7 +345,7 @@ $(document).ready(function () {
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Thuan Pham, Gidon Ernst at LMU Munich 2018– ). Software fuzzing with machine learning.</li>
-<li><a href="https://www.linkedin.com/in/neil-marchant-466678aa/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016– ). Record linkage, adaptive importance sampling.</li>
+<li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016– ). Record linkage, adaptive importance sampling.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
