--- a/pubs.html
+++ b/pubs.html
@@ -334,7 +334,7 @@ $(document).ready(function () {
 @inproceedings{xu2021a,
   title = {A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning},
   author = {Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
-  booktitle = {Proceedings of the 2021 World Wide Web Conferece},
+  booktitle = {Proceedings of the Web Conference 2021},
   series = {WWW},
   note = {Accepted},
   year = {2021},
@@ -342,7 +342,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzman, Benjamin I. P. Rubinstein, and Trevor Cohn. “A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning”. In: <em>Proceedings of the 2021 World Wide Web Conferece</em>. WWW. Accepted. 2021 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021a.bib', 'bibtex-xu2021a')">BibTeX</a>]</li>
+<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzman, Benjamin I. P. Rubinstein, and Trevor Cohn. “A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning”. In: <em>Proceedings of the Web Conference 2021</em>. WWW. Accepted. 2021 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021a.bib', 'bibtex-xu2021a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -626,14 +626,14 @@ $(document).ready(function () {
   title = {Truth inference at scale: {A} {B}ayesian model for adjudicating highly redundant crowd annotations},
   author = {Yuan Li and Benjamin I. P. Rubinstein and Trevor Cohn},
   year = {2019},
-  booktitle = {Proceedings of the 2019 World Wide Web Conferece},
+  booktitle = {Proceedings of the Web Conference 2019},
   series = {WWW},
   pages = {1028--1038},
 }
 </code></pre></div>
 
 <ul>
-<li>Li, Yuan, Benjamin I. P. Rubinstein, and Trevor Cohn. “Truth inference at scale: A Bayesian model for adjudicating highly redundant crowd annotations”. In: <em>Proceedings of the 2019 World Wide Web Conferece</em>. WWW. 2019, pp. 1028-1038 [<a href="http://arxiv.org/abs/1902.08918">full</a>; <a href="https://doi.org/10.1145/3308558.3313459">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019truth.bib', 'bibtex-li2019truth')">BibTeX</a>]</li>
+<li>Li, Yuan, Benjamin I. P. Rubinstein, and Trevor Cohn. “Truth inference at scale: A Bayesian model for adjudicating highly redundant crowd annotations”. In: <em>Proceedings of the Web Conference 2019</em>. WWW. 2019, pp. 1028-1038 [<a href="http://arxiv.org/abs/1902.08918">full</a>; <a href="https://doi.org/10.1145/3308558.3313459">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('li2019truth.bib', 'bibtex-li2019truth')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
