--- a/pubs.html
+++ b/pubs.html
@@ -346,9 +346,25 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-perera2020">
+@inproceedings{perera2020,
+  title = {{DBA} bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees},
+  booktitle = {2021 IEEE 37th International Conference on Data Engineering},
+  series = {ICDE},
+  author = {R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  note = {Accepted},
+  year = {2021},
+}
+</code></pre></div>
+
+<ul>
+<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “DBA bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees”. In: <em>2021 IEEE 37th International Conference on Data Engineering</em>. ICDE. Accepted. 2021 [<a href="https://arxiv.org/abs/2010.09208">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2020.bib', 'bibtex-perera2020')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-zhang2021improving">
 @inproceedings{zhang2021improving,
-  title = {Improving Interpretability of {CNN} Models Using Non-Negative Concept Activation Vectors},
+  title = {Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors},
   author = {Ruihan Zhang and Prashan Madumal and Tim Miller and Kris Ehinger and Benjamin Rubinstein},
   booktitle = {Proceedings of the 35th AAAI Conference on Artificial Intelligence},
   series = {AAAI},
@@ -358,7 +374,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Improving Interpretability of CNN Models Using Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2021 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
+<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2021 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
@@ -457,21 +473,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>A general framework for label-efficient online evaluation with asymptotic guarantees</em>. arXiv:2006.06963 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.06963">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020a.bib', 'bibtex-marchant2020a')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-perera2020">
-@misc{perera2020,
-  title = {{DBA} bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees},
-  author = {R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
-  note = {arXiv:2010.09208 [cs.DB]},
-  year = {2020},
-  month = {Oct},
-}
-</code></pre></div>
-
-<ul>
-<li>Perera, R. Malinga, Bastian Oetomo, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. <em>DBA bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees</em>. arXiv:2010.09208 [cs.DB]. Oct. 2020 [<a href="https://arxiv.org/abs/2010.09208">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('perera2020.bib', 'bibtex-perera2020')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -1940,7 +1941,7 @@ $(document).ready(function () {
 <ul>
 <li>Rubinstein, Benjamin I. P. “Evolving quantum circuits using genetic programming”. In: <em>Proceedings of the 2001 Congress on Evolutionary Computation</em>. CEC. IEEE. 2001, pp. 144-151 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf">PDF</a>; <span style="color:red">Winner of IEEE Computer Society’s Lance Stafford Larson Scholarship for best undergraduate student paper worldwide</span>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2001evolving.bib', 'bibtex-rubinstein2001evolving')">BibTeX</a>]</li>
 </ul>
-<!-- ranked total 57 astar 29 0.508771929824561 aastar 45 0.789473684210526 -->
+<!-- ranked total 58 astar 30 0.517241379310345 aastar 46 0.793103448275862 -->
 </div>
 
 
