--- a/pubs.html
+++ b/pubs.html
@@ -420,12 +420,15 @@ $(document).ready(function () {
   year = {2020},
   author = {Kobi Leins and Chris Culnane and Benjamin I. P. Rubinstein},
   journal = {Medical Journal of Australia},
-  month = {June},
+  month = {July},
+  volume = {213},
+  number = {1},
+  pages = {6--8},
 }
 </code></pre></div>
 
 <ul>
-<li>Leins, Kobi, Chris Culnane, and Benjamin I. P. Rubinstein. “Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions”. In: <em>Medical Journal of Australia</em> (Jun. 2020). [<a href="https://doi.org/10.5694/mja2.50669">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('leins2020tracking.bib', 'bibtex-leins2020tracking')">BibTeX</a>]</li>
+<li>Leins, Kobi, Chris Culnane, and Benjamin I. P. Rubinstein. “Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions”. In: <em>Medical Journal of Australia</em> 213.1 (Jul. 2020), pp. 6-8 [<a href="https://doi.org/10.5694/mja2.50669">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('leins2020tracking.bib', 'bibtex-leins2020tracking')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -496,14 +499,14 @@ $(document).ready(function () {
   title = {Legion: Best-First Concolic Testing},
   year = {2020},
   author = {Dongge Liu and Gidon Ernst and Toby Murray and Benjamin I. P. Rubinstein},
-  booktitle = {The 35th IEEE/ACM International Conference on Automated Software Engineering},
+  booktitle = {2020 35th IEEE/ACM International Conference on Automated Software Engineering},
   series = {ASE},
-  note = {Accepted},
+  pages = {54--65},
 }
 </code></pre></div>
 
 <ul>
-<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>The 35th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. Accepted. 2020 [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a href="https://arxiv.org/abs/2002.06311">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legionb.bib', 'bibtex-liu2020legionb')">BibTeX</a>]</li>
+<li>Liu, Dongge, Gidon Ernst, Toby Murray, and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>2020 35th IEEE/ACM International Conference on Automated Software Engineering</em>. ASE. 2020, pp. 54-65 [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a href="https://arxiv.org/abs/2002.06311">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legionb.bib', 'bibtex-liu2020legionb')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -851,12 +854,13 @@ $(document).ready(function () {
   booktitle = {AAAI-18 Workshop on Artificial Intelligence for Cyber Security},
   series = {AICS},
   year = {2018},
+  pages = {237--244},
   month = {Jan},
 }
 </code></pre></div>
 
 <ul>
-<li>Han, Yi and Benjamin I. P. Rubinstein. “Adequacy of the Gradient-Descent Method for Classifier Evasion Attacks”. In: <em>AAAI-18 Workshop on Artificial Intelligence for Cyber Security</em>. AICS. Jan. 2018 [<a href="https://arxiv.org/pdf/1704.01704">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2018adequacy.bib', 'bibtex-han2018adequacy')">BibTeX</a>]</li>
+<li>Han, Yi and Benjamin I. P. Rubinstein. “Adequacy of the Gradient-Descent Method for Classifier Evasion Attacks”. In: <em>AAAI-18 Workshop on Artificial Intelligence for Cyber Security</em>. AICS. Jan. 2018, pp. 237-244 [<a href="https://arxiv.org/pdf/1704.01704">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2018adequacy.bib', 'bibtex-han2018adequacy')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-4" class="section level3">
@@ -1043,11 +1047,12 @@ $(document).ready(function () {
   series = {HERDSA},
   year = {2017},
   month = {Apr},
+  pages = {392--401},
 }
 </code></pre></div>
 
 <ul>
-<li>Verkade, Heather, Jason M. Lodge, Kristine Elliott, Terrence D. Mulhern, Allen A. Espinosa, Simon J. Cropper, and Benjamin I. P. Rubinstein. “Exploring misconceptions as a trigger for enhancing student learning”. In: <em>Higher Education Research and Development Society of Australasia</em>. HERDSA. Apr. 2017 [<a href="http://www.herdsa.org.au/system/files/Verkade_et_al_HERDSA2017.pdf">PDF</a>; <a href="http://www.herdsa.org.au/research-and-development-higher-education-vol-40-392">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('verkade2017exploring.bib', 'bibtex-verkade2017exploring')">BibTeX</a>]</li>
+<li>Verkade, Heather, Jason M. Lodge, Kristine Elliott, Terrence D. Mulhern, Allen A. Espinosa, Simon J. Cropper, and Benjamin I. P. Rubinstein. “Exploring misconceptions as a trigger for enhancing student learning”. In: <em>Higher Education Research and Development Society of Australasia</em>. HERDSA. Apr. 2017, pp. 392-401 [<a href="http://www.herdsa.org.au/system/files/Verkade_et_al_HERDSA2017.pdf">PDF</a>; <a href="http://www.herdsa.org.au/research-and-development-higher-education-vol-40-392">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('verkade2017exploring.bib', 'bibtex-verkade2017exploring')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-5" class="section level3">
