--- a/pubs.html
+++ b/pubs.html
@@ -369,16 +369,13 @@ $(document).ready(function () {
   booktitle = {Proceedings of the 35th AAAI Conference on Artificial Intelligence},
   series = {AAAI},
   year = {2021},
-  note = {Accepted},
+  note = {In press},
 }
 </code></pre></div>
 
 <ul>
-<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. Accepted. 2021 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
+<li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. In press. 2021 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
 </ul>
-</div>
-<div id="section-1" class="section level3">
-<h3>2020</h3>
 
 <div class="bibox" style="display: none;">
 <pre><code id="bibtex-marchant2020dblink">
@@ -386,15 +383,17 @@ $(document).ready(function () {
   title = {d-blink: Distributed End-to-End Bayesian Entity Resolution},
   author = {Neil G. Marchant and Rebecca C. Steorts and Andee Kaplan and Benjamin I. P. Rubinstein and Daniel N. Elazar},
   journal = {Journal of Computational and Graphical Statistics},
-  year = {2020},
-  month = {Sep},
-  note = {Accepted},
+  year = {2021},
+  month = {Feb},
 }
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> (Sep. 2020). Accepted. [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a href="https://amstat.tandfonline.com/doi/full/10.1080/10618600.2020.1825451">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
+<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> (Feb. 2021). [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a href="https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
 </ul>
+</div>
+<div id="section-1" class="section level3">
+<h3>2020</h3>
 
 <div class="bibox" style="display: none;">
 <pre><code id="bibtex-fish2020sampling">
