--- a/group.html
+++ b/group.html
@@ -328,6 +328,7 @@ $(document).ready(function () {
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
+<li><a href="https://www.ngmarchant.net/">Neil Marchant</a> (2021– ). Machine learning in privacy and databases.</li>
 <li><a href="https://changxu.io/">Chang Xu</a> (w Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (w Alpcan 2019– ). Machine learning for spectrum management in contested environments.</li>
 <li><a href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal Weerasinghe</a> (w Leckie, Erfani, Alpcan 2019– ). Adversarial machine learning.</li>
