--- a/pubs.html
+++ b/pubs.html
@@ -362,6 +362,37 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2020dblink">
+@article{marchant2020dblink,
+  title = {d-blink: Distributed End-to-End Bayesian Entity Resolution},
+  author = {Neil G. Marchant and Rebecca C. Steorts and Andee Kaplan and Benjamin I. P. Rubinstein and Daniel N. Elazar},
+  journal = {Journal of Computational and Graphical Statistics},
+  year = {2021},
+  month = {Feb},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> (Feb. 2021). [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a href="https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-weerasinghe2021closing">
+@inproceedings{weerasinghe2021closing,
+  title = {Closing the {BIG-LID}: An Effective Local Intrinsic Dimensionality Defense for Nonlinear Regression Poisoning},
+  author = {Sandamal Weerasinghe and Benjamin I. P. Rubinstein and Tansu Alpcan and Sarah Erfani and Christopher Leckie and Tamas Abraham},
+  booktitle = {The 30th International Joint Conference on Artificial Intelligence},
+  series = {IJCAI},
+  year = {2021},
+  note = {In press},
+}
+</code></pre></div>
+
+<ul>
+<li>Weerasinghe, Sandamal, Benjamin I. P. Rubinstein, Tansu Alpcan, Sarah Erfani, Christopher Leckie, and Tamas Abraham. “Closing the BIG-LID: An Effective Local Intrinsic Dimensionality Defense for Nonlinear Regression Poisoning”. In: <em>The 30th International Joint Conference on Artificial Intelligence</em>. IJCAI. In press. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('weerasinghe2021closing.bib', 'bibtex-weerasinghe2021closing')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-zhang2021improving">
 @inproceedings{zhang2021improving,
   title = {Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors},
@@ -375,21 +406,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. In press. 2021 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-marchant2020dblink">
-@article{marchant2020dblink,
-  title = {d-blink: Distributed End-to-End Bayesian Entity Resolution},
-  author = {Neil G. Marchant and Rebecca C. Steorts and Andee Kaplan and Benjamin I. P. Rubinstein and Daniel N. Elazar},
-  journal = {Journal of Computational and Graphical Statistics},
-  year = {2021},
-  month = {Feb},
-}
-</code></pre></div>
-
-<ul>
-<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein, and Daniel N. Elazar. “d-blink: Distributed End-to-End Bayesian Entity Resolution”. In: <em>Journal of Computational and Graphical Statistics</em> (Feb. 2021). [<a href="https://arxiv.org/abs/1909.06039">full</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a href="https://www.tandfonline.com/doi/full/10.1080/10618600.2020.1825451">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020dblink.bib', 'bibtex-marchant2020dblink')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
@@ -1945,7 +1961,7 @@ $(document).ready(function () {
 <ul>
 <li>Rubinstein, Benjamin I. P. “Evolving quantum circuits using genetic programming”. In: <em>Proceedings of the 2001 Congress on Evolutionary Computation</em>. CEC. IEEE. 2001, pp. 144-151 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf">PDF</a>; <span style="color:red">Winner of IEEE Computer Society’s Lance Stafford Larson Scholarship for best undergraduate student paper worldwide</span>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2001evolving.bib', 'bibtex-rubinstein2001evolving')">BibTeX</a>]</li>
 </ul>
-<!-- ranked total 58 astar 30 0.517241379310345 aastar 46 0.793103448275862 -->
+<!-- ranked total 59 astar 31 0.525423728813559 aastar 47 0.796610169491525 -->
 </div>
 
 
