--- a/pubs.html
+++ b/pubs.html
@@ -333,7 +333,7 @@ $(document).ready(function () {
 <pre><code id="bibtex-xu2021a">
 @inproceedings{xu2021a,
   title = {A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning},
-  author = {Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
+  author = {Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzm{\a'a}n and Benjamin I. P. Rubinstein and Trevor Cohn},
   booktitle = {Proceedings of the Web Conference 2021},
   series = {WWW},
   note = {Accepted},
@@ -342,7 +342,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzman, Benjamin I. P. Rubinstein, and Trevor Cohn. “A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning”. In: <em>Proceedings of the Web Conference 2021</em>. WWW. Accepted. 2021 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021a.bib', 'bibtex-xu2021a')">BibTeX</a>]</li>
+<li>Xu, Chang, Jun Wang, Yuqing Tang, Francisco Guzmán, Benjamin I. P. Rubinstein, and Trevor Cohn. “A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning”. In: <em>Proceedings of the Web Conference 2021</em>. WWW. Accepted. 2021 [<a href="https://arxiv.org/abs/2011.00675">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('xu2021a.bib', 'bibtex-xu2021a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -406,6 +406,36 @@ $(document).ready(function () {
 
 <ul>
 <li>Zhang, Ruihan, Prashan Madumal, Tim Miller, Kris Ehinger, and Benjamin Rubinstein. “Invertible Concept-Based Explanations for CNN Models with Non-Negative Concept Activation Vectors”. In: <em>Proceedings of the 35th AAAI Conference on Artificial Intelligence</em>. AAAI. In press. 2021 [<a href="https://arxiv.org/abs/2006.15417">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('zhang2021improving.bib', 'bibtex-zhang2021improving')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-wang2021putting">
+@inproceedings{wang2021putting,
+  title = {Putting words into the system's mouth: A targeted attack on neural machine translation using monolingual data poisoning},
+  author = {Jun Wang and Chang Xu and Francisco Guzm{\a'a}n and Ahmed El-Kishky and Yuqing Tang and Benjamin I. P. Rubinstein and Trevor Cohn},
+  year = {2021},
+  booktitle = {Findings of ACL},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “Putting words into the system’s mouth: A targeted attack on neural machine translation using monolingual data poisoning”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('wang2021putting.bib', 'bibtex-wang2021putting')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-xu2021as">
+@inproceedings{xu2021as,
+  title = {As Easy as 1, 2, 3: Behavioural Testing of {NMT} Systems for Numerical Translation},
+  author = {Jun Wang and Chang Xu and Francisco Guzm{\a'a}n and Ahmed El-Kishky and Yuqing Tang and Benjamin I. P. Rubinstein and Trevor Cohn},
+  year = {2021},
+  booktitle = {Findings of ACL},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “As Easy as 1, 2, 3: Behavioural Testing of NMT Systems for Numerical Translation”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('xu2021as.bib', 'bibtex-xu2021as')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
