--- a/pubs.html
+++ b/pubs.html
@@ -330,6 +330,22 @@ $(document).ready(function () {
 <h3>2021</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2021needle">
+@inproceedings{marchant2021needle,
+  title = {Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance},
+  author = {Neil G. Marchant and Benjamin I. P. Rubinstein},
+  booktitle = {Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  series = {KDD},
+  year = {2021},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance”. In: <em>Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery &amp; Data Mining</em>. KDD. Accepted. 2021 [<a href="https://arxiv.org/abs/2006.06963">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2021needle.bib', 'bibtex-marchant2021needle')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-xu2021a">
 @inproceedings{xu2021a,
   title = {A Targeted Attack on Black-Box Neural Machine Translation with Parallel Data Poisoning},
@@ -506,21 +522,6 @@ $(document).ready(function () {
 
 <ul>
 <li>Culnane, Chris, Benjamin I. P. Rubinstein, and David Watts. <em>Not fit for Purpose: A critical analysis of the ‘Five Safes’</em>. arXiv:2011.02142 [cs.CR]. Nov. 2020 [<a href="https://arxiv.org/abs/2011.02142">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('culnane2020a.bib', 'bibtex-culnane2020a')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-marchant2020a">
-@misc{marchant2020a,
-  title = {A general framework for label-efficient online evaluation with asymptotic guarantees},
-  author = {Neil G. Marchant and Benjamin I. P. Rubinstein},
-  note = {arXiv:2006.06963 [cs.LG]},
-  year = {2020},
-  month = {Jun},
-}
-</code></pre></div>
-
-<ul>
-<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>A general framework for label-efficient online evaluation with asymptotic guarantees</em>. arXiv:2006.06963 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.06963">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020a.bib', 'bibtex-marchant2020a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
