--- a/pubs.html
+++ b/pubs.html
@@ -1992,7 +1992,7 @@ $(document).ready(function () {
 <ul>
 <li>Rubinstein, Benjamin I. P. “Evolving quantum circuits using genetic programming”. In: <em>Proceedings of the 2001 Congress on Evolutionary Computation</em>. CEC. IEEE. 2001, pp. 144-151 [<a href="https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf">PDF</a>; <span style="color:red">Winner of IEEE Computer Society’s Lance Stafford Larson Scholarship for best undergraduate student paper worldwide</span>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2001evolving.bib', 'bibtex-rubinstein2001evolving')">BibTeX</a>]</li>
 </ul>
-<!-- ranked total 59 astar 31 0.525423728813559 aastar 47 0.796610169491525 -->
+<!-- ranked total 60 astar 32 0.533333333333333 aastar 48 0.8 -->
 </div>
 
 
