--- a/pubs.html
+++ b/pubs.html
@@ -334,7 +334,7 @@ $(document).ready(function () {
 @inproceedings{marchant2021needle,
   title = {Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance},
   author = {Neil G. Marchant and Benjamin I. P. Rubinstein},
-  booktitle = {Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  booktitle = {Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   series = {KDD},
   year = {2021},
   note = {Accepted},
@@ -342,7 +342,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance”. In: <em>Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery &amp; Data Mining</em>. KDD. Accepted. 2021 [<a href="https://arxiv.org/abs/2006.06963">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2021needle.bib', 'bibtex-marchant2021needle')">BibTeX</a>]</li>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “Needle in a Haystack: Label-Efficient Evaluation under Extreme Class Imbalance”. In: <em>Proceedings of the 27th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</em>. KDD. Accepted. 2021 [<a href="https://arxiv.org/abs/2006.06963">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2021needle.bib', 'bibtex-marchant2021needle')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
