--- a/pubs.html
+++ b/pubs.html
@@ -1031,7 +1031,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Liu, Xunyun, Aaron Harwood, Shanika Karunasekera, Benjamin Rubinstein, and Rajkumar Buyya. “E-storm: Replication-based state management in distributed stream processing systems”. In: <em>46th International Conference on Parallel Processing</em>. ICPP. IEEE. 2017, pp. 571-580 [<a href="http://www.buyya.com/papers/E-Storm2017.pdf">PDF</a>; <a href="https://ieeexplore.ieee.org/document/8025331/">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2017estorm.bib', 'bibtex-liu2017estorm')">BibTeX</a>]</li>
+<li>Liu, Xunyun, Aaron Harwood, Shanika Karunasekera, Benjamin Rubinstein, and Rajkumar Buyya. “E-storm: Replication-based state management in distributed stream processing systems”. In: <em>46th International Conference on Parallel Processing</em>. ICPP. IEEE. 2017, pp. 571-580 [<a href="https://drive.google.com/file/d/19dHJf_VuyZ5QK43qdkNi73JEu2JtiT09/view?usp=sharing">PDF</a>; <a href="https://ieeexplore.ieee.org/document/8025331/">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2017estorm.bib', 'bibtex-liu2017estorm')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
