--- a/pubs.html
+++ b/pubs.html
@@ -436,7 +436,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “Putting words into the system’s mouth: A targeted attack on neural machine translation using monolingual data poisoning”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a style="cursor: pointer;" onclick="DownloadToFile('wang2021putting.bib', 'bibtex-wang2021putting')">BibTeX</a>]</li>
+<li>Wang, Jun, Chang Xu, Francisco Guzmán, Ahmed El-Kishky, Yuqing Tang, Benjamin I. P. Rubinstein, and Trevor Cohn. “Putting words into the system’s mouth: A targeted attack on neural machine translation using monolingual data poisoning”. In: <em>Findings of ACL</em>. Accepted. 2021 [<a href="https://github.com/JunW15/Monolingual-Attack">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('wang2021putting.bib', 'bibtex-wang2021putting')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
